# 2024_C_AV_RPI

./: #home#av#UnitDir#2024_C_AV_RPI#src#data#data.cpp.gcov  #home#av#UnitDir#2024_C_AV_RPI#src#data#data.h.gcov  #home#av#UnitDir#2024_C_AV_RPI#tests#data_test.cpp.gcov  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  battery.cpp  battery.h  cmake_install.cmake  data.cpp  data.h  entrypoint.sh  flight_control_test  main.cpp  mainDraft.cpp  pi_ssh_enable.exp  sensors.cpp  sensors.h  telecom.cpp  telecom.h  test.cpp
.scannerwork/: report-task.txt
2024_C_AV_INTRANET/: intranet_commands.h
Control/: Control.cpp
FSM1.0/: FSM.cpp  (+1 more)
LoRa4Raspi/: CMakeLists.txt
LoRa4Raspi/examples/LoRaDuplex/: LoRaDuplex.cpp
LoRa4Raspi/examples/LoRaDuplexCallback/: LoRaDuplexCallback.cpp
LoRa4Raspi/examples/LoRaReceiverCallback/: LoRaReceiverCallback.cpp
LoRa4Raspi/examples/LoRaSender/: LoRaSender.cpp
LoRa4Raspi/examples/LoRaSenderNonBlockingCallback/: LoRaSenderNonBlockingCallback.cpp
LoRa4Raspi/examples/LoRaSimpleGateway/: LoRaSimpleGateway.cpp
LoRa4Raspi/examples/LoRaSimpleNode/: LoRaSimpleNode.cpp
LoRa4Raspi/include/: LoRa.h  LoopbackStream.h  Stream.h  itoa.h
LoRa4Raspi/src/: LoRa.cpp  LoRa.h  LoopbackStream.cpp  Stream.cpp  compile.sh  itoa.cpp
data/: CMakeLists.txt
data/include/: capsule.h  data.h  sensors.h  telecom.h
data/src/: data.cpp  sensors.cpp  telecom.cpp
flightControl/: CMakeLists.txt
flightControl/include/: AvState.h  Kalman.h  thresholds.h
flightControl/src/: AvState.cpp  Kalman.cpp
sensor/: CMakeLists.txt
sensor/include/: adxl375.h
sensor/src/: I2CGPS.cpp  TinyGPS++.cpp  adxl375.cpp  bmi08a.cpp  bmi08g.cpp  bmi08xa.cpp  bmp3.cpp
src/: CMakeLists.txt  DriverInterface.h  I2cHandler.cpp  av_timer.cpp  av_timer.h  buzzer.cpp  buzzer.h  config.h  data.cpp  data.h  sensors.cpp  sensors.h  telecom.h
src/I2CInterface/: I2CInterface.cpp
src/action/: ActI.h  MIXER.cpp  MIXER.h  OUTPUT.cpp  OUTPUT.h
src/data/: Prop.cpp  Prop.h  Telecom_Interface.h  data.cpp  data.h  datalogger.cpp  datalogger.h  fakeData.cpp  fakeSensor.cpp  fakeSensors.cpp  fakeTelecom.cpp  logger.cpp  logger.h  sensors.cpp  sensors.h  telecom.cpp  telecom.h  thresholds.cpp
src/flightControl/: AvData.cpp  AvState.cpp  I2cHandler.cpp  Kalman.cpp  PingI2c.cpp
src/flight_control/: States_def.h  av_state.cpp  av_state.h  missing_sensors.h  thresholds.h
src/h_drivers/: PR_board.cpp  PR_board.h  camera.cpp  camera.h  dpr.cpp  dpr.h  h_driver.h  sensors.cpp  sensors.h  telecom.cpp  telecom.h  trigger_board.cpp  trigger_board.h
src/i2c_interface/: CMakeLists.txt  i2c_interface.cpp  i2c_interface.h  i2c_wrappers.h
src/i2c_mock/: i2c_bus.cpp  i2c_bus.h  i2c_device.h  i2c_interface.cpp  i2c_physics.h
src/i2c_mock/devices/: example.h
src/interface/h_drivers/: PR_board.cpp  PR_board.h  h_driver.h
src/interface/h_drivers/flight_control/: PR_trigger_board.cpp  PR_trigger_board.h
src/kalman/: kalman.cpp  kalman.h  kalman_params.h  rotation_utils.cpp  rotation_utils.h
src/mock/: MockAdxl375.cpp  MockBmi08.cpp  MockBmp390.cpp  tsdb.cpp  tsdb.h  tsdb_example.cpp
src/mock_util/: tsdb.cpp  tsdb.h
src/modules/: config.cpp  config.h  dynconf.cpp  dynconf.h  example_config.conf  module.cpp  module.h
src/modules/sensors/: adxl375_module.cpp  adxl375_module.h  bmi088_module.cpp  bmi088_module.h  bmp390_module.cpp  bmp390_module.h  gps_module.cpp  gps_module.h  ina228_module.cpp  ina228_module.h  tmp1075_module.cpp  tmp1075_module.h
src/neopixel/: CMakeLists.txt  led_ws2812.cpp  led_ws2812.h  led_ws2812_defines.h
src/post_flight/: cache  code.cpp  dump2csv.h  dump2csv.py  dump2csv.sh  dump2csvgen.py  event2logs  event2logs.cpp  main
src/pre_flight/: config_scheme.json  config_viewer.py
src/sensor/: GPS-I2C.cpp  I2CGPS.cpp  adxl375.cpp  bmi08xa.cpp  bmp3.cpp
src/sensor_drivers/: CMakeLists.txt  I2CGPS.cpp  I2CGPS.h  I2CGPS_gmock.h  I2CGPS_interface.h  IAdxl375.h  IBmi08.h  IBmp390.h  IIna228.h  INA228.cpp  INA228.h  ITmp1075.h  MockAdxl375.h  MockBmi08.h  MockBmp390.h  MockIna228.h  MockTmp1075.h  TMP1075.cpp  TMP1075.h  TinyGPS++.cpp  TinyGPS++.h  TinyGPS++_gmock.h  TinyGPS++_inteface.h  TinyGPS++_interface.h  adxl375.cpp  adxl375.h  adxl375_gmock.h  adxl375_interface.h  bmi08.h  bmi08_defs.h  bmi08_gmock.h  bmi08_interface.h  bmi08a.cpp  bmi08g.cpp  bmi08x.h  bmi08xa.cpp  bmp3.cpp  bmp3.h  bmp3_defs.h  bmp3_gmock.h  (+1 more)
src/sensor_drivers/mock/: MockAdxl375.cpp  MockBmi08.cpp  MockBmp390.cpp  MockIna228.cpp  MockTmp1075.cpp  mockNavSensors.cpp
tests/: ADXL375_test.cpp  AvState_test.cpp  BMI088_test.cpp  BMP390_test.cpp  CMakeLists copy.txt  CMakeLists.txt  Capsule_test.cpp  DataLogger_test.cpp  FeededTests.cpp  GS_debug.cpp  GS_valves_test.cpp  I2CGPS_test.cpp  INA228_HPB_test.cpp  INA228_LPB_test.cpp  INA228_test.cpp  Kalman1_onesensor_nogyro_graph_test.py  Kalman1_onesensor_nogyro_test.cpp  Kalman1_onesensor_withgyro_graph_accel_test.py  Kalman1_onesensor_withgyro_graph_velocity_test.py  Kalman1_onesensor_withgyro_test.cpp  Kalman_new_test.cpp  Kalman_predict_test.cpp  Kalman_test.cpp  LoRa_test.cpp  MockSensor.cpp  MockSensor.h  MockSensor_test.cpp  NavigationData.csv  NavigationSensors.csv  PRB_test.cpp  State_test_gtest.cpp  TMP1075_test.cpp  TRB_test.cpp  Test_AVTrainingData.csv  adxl375_test_mock.cpp  av_timer_test.cpp  basicTest_avState.cpp  buzzer_test.cpp  camera_test.cpp  dataLog_test.cpp  (+28 more)
tests/SIL/: DataLogger_test.cpp  main_test.cpp
tests/hardware/: ADXL375_test.cpp  I2CGPS_test.cpp
tests/include/: MockSensor.h
tests/legacy/: CMakeLists.txt  GS_debug.cpp  MockSensor.cpp  MockSensor.h  data_test.cpp  main_test.cpp  prb_logic_test.cpp  valves_test.cpp
tests/old_kalman_tests/: Kalman_new_test.cpp  Kalman_test.cpp  new_output_Kalman_test.csv  new_output_kalman_test.py  output_Kalman_test.csv
tests/software/: CMakeLists.txt  data_test.cpp
tests/src/: AvState_test.cpp  I2CArduino_test.cpp  LoRa_test.cpp  MockSensor.cpp  main_test.cpp
tests/src/I2CArduino_test/: I2CArduino_Arduino.c  I2CArduino_RaspberryPi.cpp
(+65 files in other folders)
